K8s/commandsApi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comandsapi-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comandsapi
  template:
    metadata:
      labels:
        app: comandsapi
    spec:
      containers:
      - name: comandsapi
        image: piotrkowalski93/commandsservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: commandsapi-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: comandsapi
  ports:
  - port: 80
    targetPort: 80
