K8s/platformsApi-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformsapi-srv
spec:
  type: NodePort
  selector:
    app: platformsapi
  ports:
  - port: 80
    targetPort: 80
